--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       font-family: sans-serif;
     }
 
-    div {
+    .container {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -20,18 +20,18 @@
       height: 100vh;
     }
 
-    h1 {
+    .container h1 {
       font-size: 2rem;
       margin: 0;
     }
 
-    p {
+    .container p {
       font-size: 1rem;
       margin: 0;
       padding-top: 1rem;
     }
 
-    button {
+    .container button {
       padding: 0.5rem 1rem;
       margin-top: 1rem;
       border: none;
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-  <div>
+  <div class="container">
     <h1>fb-userscript</h1>
     <p>Template for creating Userscripts with Vite</p>
     <button>Install</button>
